# ncmu-kb-adapter

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/kb_adapter/: auth.py  fastgpt_client.py  main.py  models.py  translator.py
tests/: conftest.py  test_multi_key_contract.py  test_retrieval.py  test_via_header.py
