[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ncmu-kb-adapter"
version = "0.0.0"
description = "NCMU Dify External KB → FastGPT retrieval adapter (self-built protocol bridge)"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "Proprietary" }
authors = [{ name = "NCMU Team" }]

dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.30,<0.31",
    "httpx>=0.27,<0.28",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
    "pytest-cov>=5.0,<6",
    "pytest-asyncio>=0.23,<0.24",
    "respx>=0.21,<0.22",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
asyncio_mode = "auto"
